# services/User/AuthService/Http/Resources/TokenResource.php
@@ -1,0 +1,23 @@
+<?php
+
+namespace Services\User\AuthService\Http\Resources;
+
+use Illuminate\Http\Request;
+use Illuminate\Http\Resources\Json\JsonResource;
+
+class TokenResource extends JsonResource
+{
+    /**
+     * Transform the resource into an array.
+     *
+     * @return array<string, mixed>
+     */
+    public function toArray(Request $request): array
+    {
+        return [
+            'access_token' => $this->resource['access_token'],
+            'type' => $this->resource['type'],
+            'expires_in' => $this->resource['expires_in'],
+        ];
+    }
+}
